import { render, cleanup, waitFor } from '@testing-library/react';
import { axe, toHaveNoViolations } from 'jest-axe';
import React from 'react';
import { Layout, LayoutProps } from '../../../../components/Layout';
import 'jest-styled-components';

expect.extend(toHaveNoViolations);

const setupComponent = ({ projectsTitles }: LayoutProps) => render(
  <Layout
    searchOptions={projectsTitles}
  />,
);

describe('Layout', () => {
  afterEach(() => {
    cleanup();
  });

  describe('UI Tests', () => {
    it('Layout component should render without crashing', async () => {
      const screen = setupComponent({
        searchOptions: ['salneo', 'tidy'],
        children: <div />,
      });
      expect(screen.container).toBeDefined();
    });
    it('Layout component (searchOptions is empty) should render without crashing', async () => {
      const screen = setupComponent({
        searchOptions: [],
        children: <div />,
      });
      expect(screen.container).toBeDefined();
    });

    it('Layout component should render correctly', async () => {
      const screen = setupComponent({ searchOptions: ['salneo', 'tidy'], children: <div /> });
      await screen
        .findByText(/swagger api/i)
        .then((element) => expect(element).toBeInTheDocument());
    });
  });

  describe('Snapshots Tests', () => {
    it('should match a basic snapshot', () => {
      const { container } = setupComponent({ searchOptions: ['salneo', 'tidy'], children: <div /> });
      expect(container).toMatchSnapshot();
    });
    it('should match a basic snapshot (searchOptions is empty)', () => {
      const { container } = setupComponent({ searchOptions: [], children: <div /> });
      expect(container).toMatchSnapshot();
    });
  });
  describe('Accessibility Tests', () => {
    it('should pass a basic accessibility test', async () => {
      const { container } = setupComponent({ searchOptions: ['salno'], children: <div /> });
      const results = await waitFor(() => axe(container));
      expect(results).toHaveNoViolations();
    });
  });
});
